# oauth2-rs

./: Cargo.toml  README.md
examples/: google_devicecode.rs  microsoft_devicecode_common_user.rs  microsoft_devicecode_tenant_user.rs
src/: basic.rs  devicecode.rs  helpers.rs  lib.rs  reqwest.rs  tests.rs  types.rs
