[package]
name = "oauth2"
authors = ["Alex Crichton <alex@alexcrichton.com>", "Florin Lipan <florinlipan@gmail.com>", "David A. Ramos <ramos@cs.stanford.edu>"]
version = "5.0.0"
license = "MIT OR Apache-2.0"
description = "An extensible, strongly-typed implementation of OAuth2"
repository = "https://github.com/ramosbugs/oauth2-rs"
edition = "2018"
readme = "README.md"

[package.metadata.docs.rs]
all-features = true

[badges]
maintenance = { status = "actively-developed" }

[features]
default = ["reqwest", "rustls-tls"]
native-tls = ["reqwest/native-tls"]
rustls-tls = ["reqwest/rustls-tls"]

[dependencies]
base64 = { version = "0.13", default-features = false, features = ["alloc"] }
http = { version = "0.2", default-features = false }
serde = { version = "1.0", default-features = false, features = ["derive", "alloc"] }
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }
chrono = { version = "0.4", default-features = false, features = ["clock"] }
anyhow = { version = "1.0", default-features = false }
form_urlencoded = { version = "1.2.1", default-features = false, features = ["alloc"] }
reqwest = { version = "0.11", optional = true, default-features = false, features = ["blocking"] }

[dev-dependencies]
hex = "0.4"
hmac = "0.12"
uuid = { version = "0.8", features = ["v4"] }
anyhow = "1.0"
tokio = { version = "1.0", features = ["full"] }
async-std = "1.6.3"
